--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^2.7.5",
     "mapbox-gl": "^2.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
