--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@types/mapbox-gl": "^2.7.5",
+    "@types/mapbox-gl": "^2.7.6",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "mapbox-gl": "^2.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
